# bibledit-desktop

./: .clang-format  .gitignore  ChangeLog  Makefile.am  README  README.md  THANKS  TODO  autogen.sh  bibledit-desktop.kdev4  configure.ac  doc.patch
.kdev4/: bibledit-desktop.kdev4
BiblesInternational/: BI_usfm_005.sty  (+28 more)
bibles/: Makefile.am
bibles/byzascii/: 1CO_BYZ.txt  1JO_BYZ.txt  1PE_BYZ.txt  1TH_BYZ.txt  1TI_BYZ.txt  2CO_BYZ.txt  2JO_BYZ.txt  2PE_BYZ.txt  2TH_BYZ.txt  2TI_BYZ.txt  3JO_BYZ.txt  AC_BYZ.txt  COL_BYZ.txt  EPH_BYZ.txt  GA_BYZ.txt  HEB_BYZ.txt  JAS_BYZ.txt  JOH_BYZ.txt  JUDE_BYZ.txt  LU_BYZ.txt  MR_BYZ.txt  MT_BYZ.txt  PHM_BYZ.txt  PHP_BYZ.txt  README  RE_BYZ.txt  RO_BYZ.txt  TIT_BYZ.txt
bibles/eng-asv/: 02-GENeng-asv.usfm  04-LEVeng-asv.usfm  05-NUMeng-asv.usfm  06-DEUeng-asv.usfm  07-JOSeng-asv.usfm  08-JDGeng-asv.usfm  09-RUTeng-asv.usfm  12-1KIeng-asv.usfm  13-2KIeng-asv.usfm  15-2CHeng-asv.usfm  18-ESTeng-asv.usfm  21-PROeng-asv.usfm  22-ECCeng-asv.usfm  24-ISAeng-asv.usfm  26-LAMeng-asv.usfm  27-EZKeng-asv.usfm  28-DANeng-asv.usfm  29-HOSeng-asv.usfm  30-JOLeng-asv.usfm  31-AMOeng-asv.usfm  32-OBAeng-asv.usfm  34-MICeng-asv.usfm  35-NAMeng-asv.usfm  36-HABeng-asv.usfm  40-MALeng-asv.usfm  70-MATeng-asv.usfm  73-JHNeng-asv.usfm  79-EPHeng-asv.usfm  83-2THeng-asv.usfm  85-2TIeng-asv.usfm  86-TITeng-asv.usfm  87-PHMeng-asv.usfm  89-JASeng-asv.usfm  92-1JNeng-asv.usfm  94-3JNeng-asv.usfm  95-JUDeng-asv.usfm  96-REVeng-asv.usfm  signature.txt.asc
bibles/eng-kjv/: 00-FRTeng-kjv.usfm  02-GENeng-kjv.usfm  04-LEVeng-kjv.usfm  07-JOSeng-kjv.usfm  10-1SAeng-kjv.usfm  11-2SAeng-kjv.usfm  12-1KIeng-kjv.usfm  13-2KIeng-kjv.usfm  14-1CHeng-kjv.usfm  17-NEHeng-kjv.usfm  22-ECCeng-kjv.usfm  23-SNGeng-kjv.usfm  26-LAMeng-kjv.usfm  27-EZKeng-kjv.usfm  28-DANeng-kjv.usfm  29-HOSeng-kjv.usfm  30-JOLeng-kjv.usfm  31-AMOeng-kjv.usfm  32-OBAeng-kjv.usfm  33-JONeng-kjv.usfm  35-NAMeng-kjv.usfm  37-ZEPeng-kjv.usfm  38-HAGeng-kjv.usfm  43-ESGeng-kjv.usfm  45-WISeng-kjv.usfm  47-BAReng-kjv.usfm  49-S3Yeng-kjv.usfm  53-2MAeng-kjv.usfm  54-1ESeng-kjv.usfm  70-MATeng-kjv.usfm  71-MRKeng-kjv.usfm  72-LUKeng-kjv.usfm  74-ACTeng-kjv.usfm  76-1COeng-kjv.usfm  77-2COeng-kjv.usfm  78-GALeng-kjv.usfm  80-PHPeng-kjv.usfm  81-COLeng-kjv.usfm  82-1THeng-kjv.usfm  84-1TIeng-kjv.usfm  (+8 more)
bibles/eng-leb/: 1Ch.txt  1Co.txt  1Jn.txt  1Ki.txt  1Pe.txt  1Sa.txt  1Th.txt  1Tim.txt  2Ch.txt  2Co.txt  2Jn.txt  2Ki.txt  2Pe.txt  2Sa.txt  2Th.txt  2Tim.txt  3Jn.txt  Acts.txt  Amos.txt  Col.txt  Dan.txt  Deut.txt  Eccl.txt  Esth.txt  Exo.txt  Ezek.txt  Gal.txt  Gen.txt  Hab.txt  Hag.txt  Heb.txt  Hos.txt  Isa.txt  Jam.txt  Jer.txt  Job.txt  Joel.txt  John.txt  Jonah.txt  Josh.txt  (+15 more)
bibles/eng-web/: 03-EXOeng-web.usfm  06-DEUeng-web.usfm  106-GLOeng-web.usfm  25-JEReng-web.usfm  27-EZKeng-web.usfm  43-ESGeng-web.usfm  52-1MAeng-web.usfm  53-2MAeng-web.usfm  57-3MAeng-web.usfm  58-2ESeng-web.usfm  72-LUKeng-web.usfm  73-JHNeng-web.usfm  75-ROMeng-web.usfm  77-2COeng-web.usfm  88-HEBeng-web.usfm  89-JASeng-web.usfm  91-2PEeng-web.usfm  96-REVeng-web.usfm
bibles/engasv/: 03-EXOeng-asv.usfm  10-1SAeng-asv.usfm  11-2SAeng-asv.usfm  14-1CHeng-asv.usfm  16-EZReng-asv.usfm  17-NEHeng-asv.usfm  19-JOBeng-asv.usfm  20-PSAeng-asv.usfm  23-SNGeng-asv.usfm  25-JEReng-asv.usfm  33-JONeng-asv.usfm  37-ZEPeng-asv.usfm  38-HAGeng-asv.usfm  39-ZECeng-asv.usfm  71-MRKeng-asv.usfm  72-LUKeng-asv.usfm  74-ACTeng-asv.usfm  75-ROMeng-asv.usfm  76-1COeng-asv.usfm  77-2COeng-asv.usfm  78-GALeng-asv.usfm  80-PHPeng-asv.usfm  81-COLeng-asv.usfm  82-1THeng-asv.usfm  84-1TIeng-asv.usfm  88-HEBeng-asv.usfm  90-1PEeng-asv.usfm  91-2PEeng-asv.usfm  93-2JNeng-asv.usfm  copr.htm
bibles/engkjv/: 03-EXOeng-kjv.usfm  05-NUMeng-kjv.usfm  06-DEUeng-kjv.usfm  08-JDGeng-kjv.usfm  09-RUTeng-kjv.usfm  15-2CHeng-kjv.usfm  16-EZReng-kjv.usfm  18-ESTeng-kjv.usfm  19-JOBeng-kjv.usfm  20-PSAeng-kjv.usfm  21-PROeng-kjv.usfm  24-ISAeng-kjv.usfm  25-JEReng-kjv.usfm  34-MICeng-kjv.usfm  36-HABeng-kjv.usfm  39-ZECeng-kjv.usfm  40-MALeng-kjv.usfm  41-TOBeng-kjv.usfm  42-JDTeng-kjv.usfm  46-SIReng-kjv.usfm  50-SUSeng-kjv.usfm  51-BELeng-kjv.usfm  52-1MAeng-kjv.usfm  55-MANeng-kjv.usfm  58-2ESeng-kjv.usfm  73-JHNeng-kjv.usfm  79-EPHeng-kjv.usfm  83-2THeng-kjv.usfm  85-2TIeng-kjv.usfm  87-PHMeng-kjv.usfm  94-3JNeng-kjv.usfm  95-JUDeng-kjv.usfm  96-REVeng-kjv.usfm  copr.htm
bibles/engleb/: 1Ch.txt  1Co.txt  1Jn.txt  1Ki.txt  1Pe.txt  1Sa.txt  1Th.txt  1Tim.txt  2Ch.txt  2Co.txt  2Jn.txt  2Ki.txt  2Pe.txt  2Sa.txt  2Th.txt  2Tim.txt  3Jn.txt  Acts.txt  Amos.txt  Col.txt  Deut.txt  Eccl.txt  Eph.txt  Exo.txt  Ezek.txt  Ezra.txt  Gen.txt  Hos.txt  Isa.txt  Jer.txt  Job.txt  Joel.txt  Jonah.txt  Jude.txt  Judg.txt  Lev.txt  Mal.txt  Mark.txt  Matt.txt  Mic.txt  (+12 more)
bibles/engmtv/: 1Co.txt  1Jo.txt  1Pe.txt  1Th.txt  1Ti.txt  2Co.txt  2Jo.txt  2Pe.txt  2Th.txt  2Ti.txt  3Jo.txt  Act.txt  Col.txt  Eph.txt  Gal.txt  Heb.txt  Jam.txt  Joh.txt  Jud.txt  Luk.txt  Mar.txt  Mat.txt  NewTestamentBibleworks.txt  NewTestamentOutline.txt  PERMISSION.txt  Phi.txt  Phm.txt  ProverbsFromGreekSeptuagint.txt  PsalmsFromGreekSeptuagint.txt  Rev.txt  Rom.txt  Tit.txt
bibles/engnet/: 1Ch.txt  1Co.txt  1Jn.txt  1Ki.txt  1Pe.txt  1Sa.txt  1Th.txt  1Tim.txt  2Ch.txt  2Co.txt  2Jn.txt  2Ki.txt  2Pe.txt  2Sa.txt  2Th.txt  2Tim.txt  3Jn.txt  Acts.txt  Amos.txt  Col.txt  Dan.txt  Deut.txt  Eccl.txt  Eph.txt  Esth.txt  Exo.txt  Ezek.txt  Ezra.txt  Gal.txt  Gen.txt  Hab.txt  Hag.txt  Heb.txt  Hos.txt  Isa.txt  Jam.txt  Jer.txt  Job.txt  Joel.txt  John.txt  (+30 more)
bibles/engweb/: 02-GENeng-web.usfm  10-1SAeng-web.usfm  20-PSAeng-web.usfm  24-ISAeng-web.usfm  46-SIReng-web.usfm  47-BAReng-web.usfm  59-4MAeng-web.usfm  70-MATeng-web.usfm  78-GALeng-web.usfm  copr.htm  signature.txt.asc
git/: Makefile.am  bibledit-git.cpp  bibledit-git.cpp.orig
pix/: Makefile.am
pix/hicolor/: Makefile.am
pix/hicolor/16x16/: Makefile.am
pix/hicolor/48x48/: Makefile.am
pix/hicolor/96x96/: Makefile.am
stuff/netbible_curl/: CMakeLists.txt  main.cpp  readme.md
stuff/netbible_curl/codeblocks/: netbiblecurl.cbp
(+941 files in other folders)
