# Installing the pre-existing Bibles that are needed for Bibledit to work

# Destination directory
bibles_dir = $(pkgdatadir)/bibles
# Destination sub-directories
bibles_byzascii_dir = $(bibles_dir)/byzascii
bibles_sblgnt_dir = $(bibles_dir)/sblgnt

# Files to install
bibles_byzascii__DATA = byzascii/1CO_BYZ.txt  byzascii/2CO_BYZ.txt  byzascii/3JO_BYZ.txt  byzascii/HEB_BYZ.txt \
			byzascii/MR_BYZ.txt   byzascii/RE_BYZ.txt   byzascii/1JO_BYZ.txt  byzascii/2JO_BYZ.txt \
			byzascii/AC_BYZ.txt   byzascii/JAS_BYZ.txt  byzascii/MT_BYZ.txt   byzascii/RO_BYZ.txt \
			byzascii/1PE_BYZ.txt  byzascii/2PE_BYZ.txt  byzascii/COL_BYZ.txt  byzascii/JOH_BYZ.txt \
			byzascii/PHM_BYZ.txt  byzascii/TIT_BYZ.txt  byzascii/1TH_BYZ.txt  byzascii/2TH_BYZ.txt \
			byzascii/EPH_BYZ.txt  byzascii/JUDE_BYZ.txt byzascii/PHP_BYZ.txt  byzascii/1TI_BYZ.txt \
			byzascii/2TI_BYZ.txt  byzascii/GA_BYZ.txt   byzascii/LU_BYZ.txt   byzascii/README
bibles_sblgnt__DATA   = sblgnt/61-Mt.txt  sblgnt/62-Mk.txt  sblgnt/63-Lk.txt  sblgnt/64-Jn.txt \
			sblgnt/65-Ac.txt  sblgnt/66-Ro.txt  sblgnt/67-1Co.txt sblgnt/68-2Co.txt \
			sblgnt/69-Ga.txt  sblgnt/70-Eph.txt sblgnt/71-Php.txt sblgnt/72-Col.txt \
			sblgnt/73-1Th.txt sblgnt/74-2Th.txt sblgnt/75-1Ti.txt sblgnt/76-2Ti.txt \
			sblgnt/77-Tit.txt sblgnt/78-Phm.txt sblgnt/79-Heb.txt sblgnt/80-Jas.txt \
			sblgnt/81-1Pe.txt sblgnt/82-2Pe.txt sblgnt/83-1Jn.txt sblgnt/84-2Jn.txt \
			sblgnt/85-3Jn.txt sblgnt/86-Jud.txt sblgnt/87-Re.txt  sblgnt/license.txt

CLEANFILES = *~
