# Installing the pre-existing Bibles that are needed for the Bibledit Analysis window
# Thanks to https://xaizek.github.io/2014-09-28/how-to-install-data-directory-with-automake/

# Destination directory
bibles_dir = $(pkgdatadir)/bibles
# Destination sub-directories
bibles_byzascii_dir = $(bibles_dir)/byzascii
bibles_sblgnt_dir = $(bibles_dir)/sblgnt
bibles_engleb_dir = $(bibles_dir)/engleb
bibles_engmtv_dir = $(bibles_dir)/engmtv

# Files to install
bibles_byzascii__DATA = byzascii/1CO_BYZ.txt  byzascii/2CO_BYZ.txt  byzascii/3JO_BYZ.txt  byzascii/HEB_BYZ.txt \
			byzascii/MR_BYZ.txt   byzascii/RE_BYZ.txt   byzascii/1JO_BYZ.txt  byzascii/2JO_BYZ.txt \
			byzascii/AC_BYZ.txt   byzascii/JAS_BYZ.txt  byzascii/MT_BYZ.txt   byzascii/RO_BYZ.txt \
			byzascii/1PE_BYZ.txt  byzascii/2PE_BYZ.txt  byzascii/COL_BYZ.txt  byzascii/JOH_BYZ.txt \
			byzascii/PHM_BYZ.txt  byzascii/TIT_BYZ.txt  byzascii/1TH_BYZ.txt  byzascii/2TH_BYZ.txt \
			byzascii/EPH_BYZ.txt  byzascii/JUDE_BYZ.txt byzascii/PHP_BYZ.txt  byzascii/1TI_BYZ.txt \
			byzascii/2TI_BYZ.txt  byzascii/GA_BYZ.txt   byzascii/LU_BYZ.txt   byzascii/README
bibles_sblgnt__DATA   = sblgnt/61-Mt.txt  sblgnt/62-Mk.txt  sblgnt/63-Lk.txt  sblgnt/64-Jn.txt \
			sblgnt/65-Ac.txt  sblgnt/66-Ro.txt  sblgnt/67-1Co.txt sblgnt/68-2Co.txt \
			sblgnt/69-Ga.txt  sblgnt/70-Eph.txt sblgnt/71-Php.txt sblgnt/72-Col.txt \
			sblgnt/73-1Th.txt sblgnt/74-2Th.txt sblgnt/75-1Ti.txt sblgnt/76-2Ti.txt \
			sblgnt/77-Tit.txt sblgnt/78-Phm.txt sblgnt/79-Heb.txt sblgnt/80-Jas.txt \
			sblgnt/81-1Pe.txt sblgnt/82-2Pe.txt sblgnt/83-1Jn.txt sblgnt/84-2Jn.txt \
			sblgnt/85-3Jn.txt sblgnt/86-Jud.txt sblgnt/87-Re.txt  sblgnt/license.txt
bibles_engleb__DATA   = engleb/Gen.txt  engleb/Exo.txt  engleb/Lev.txt  engleb/Num.txt   engleb/Deut.txt engleb/Josh.txt engleb/Judg.txt \
			engleb/Ruth.txt engleb/1Sa.txt  engleb/2Sa.txt  engleb/1Ki.txt   engleb/2Ki.txt  engleb/1Ch.txt  engleb/2Ch.txt \
			engleb/Ezra.txt engleb/Neh.txt  engleb/Esth.txt engleb/Job.txt   engleb/Psal.txt engleb/Prov.txt engleb/Eccl.txt \
			engleb/Song.txt engleb/Isa.txt  engleb/Jer.txt  engleb/Lam.txt   engleb/Ezek.txt engleb/Dan.txt  engleb/Hos.txt \
			engleb/Joel.txt engleb/Amos.txt engleb/Obad.txt engleb/Jonah.txt engleb/Mic.txt  engleb/Nah.txt  engleb/Hab.txt \
			engleb/Zeph.txt engleb/Hag.txt  engleb/Zech.txt engleb/Mal.txt   engleb/Matt.txt engleb/Mark.txt engleb/Luke.txt \
			engleb/John.txt engleb/Acts.txt engleb/Rom.txt  engleb/1Co.txt   engleb/2Co.txt  engleb/Gal.txt  engleb/Eph.txt \
			engleb/Php.txt  engleb/Col.txt  engleb/1Th.txt  engleb/2Th.txt   engleb/1Tim.txt engleb/2Tim.txt engleb/Tit.txt \
			engleb/Phm.txt  engleb/Heb.txt  engleb/Jam.txt  engleb/1Pe.txt   engleb/2Pe.txt  engleb/1Jn.txt  engleb/2Jn.txt \
			engleb/3Jn.txt  engleb/Jude.txt engleb/Rev.txt
bibles_engmtv__DATA   = engmtv/NewTestamentBibleworks.txt engmtv/NewTestamentOutline.txt \
			engmtv/1Co.txt  engmtv/2Th.txt  engmtv/Jam.txt \
			engmtv/1Jo.txt  engmtv/2Ti.txt  engmtv/Joh.txt engmtv/Phi.txt \
			engmtv/1Pe.txt  engmtv/3Jo.txt  engmtv/Jud.txt engmtv/Phm.txt \
			engmtv/1Th.txt  engmtv/Act.txt  engmtv/Luk.txt \
			engmtv/1Ti.txt  engmtv/Col.txt  engmtv/Mar.txt \
			engmtv/2Co.txt  engmtv/Eph.txt  engmtv/Mat.txt engmtv/Rev.txt \
			engmtv/2Jo.txt  engmtv/Gal.txt  engmtv/Rom.txt \
			engmtv/2Pe.txt  engmtv/Heb.txt  engmtv/Tit.txt

CLEANFILES = *~
