cmake_minimum_required(VERSION 2.8.9)
project(netbiblecurl)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
set(CURL_LIBRARY "-lcurl") 
find_package(CURL REQUIRED) 
add_executable(netbiblecurl main.cpp)
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(netbiblecurl ${CURL_LIBRARIES})
